tests/negative/semantic/wrong_arg_count_makeepoch/input.ci
void main() {
    print(toString(makeEpoch(2025)) + "\n");
}
